css/main.css
/* ... */
.btn-hover-accent-mobile i,
.btn-hover-accent-mobile span {
  color: var(--t-opp-bright);
}
@media only screen and (min-width: 992px) {
  .btn-hover-accent-mobile::before {
    background: var(--base);
    border: 1px solid var(--stroke-controls);
  }
  .btn-hover-accent-mobile i,
  .btn-hover-accent-mobile span {
    color: var(--t-bright);
  }
}
@media only screen and (min-width: 1200px) {
  .btn-hover-accent-mobile i,
  .btn-hover-accent-mobile span {
    color: rgba(0, 0, 0, 0);
    text-shadow:
      0 0 var(--t-bright),
      0 5rem var(--t-bright);
  }
  .no-touch .btn-hover-accent-mobile:hover i,
  .no-touch .btn-hover-accent-mobile:hover span {
    text-shadow:
      0 -5rem var(--t-bright),
      0 0 var(--t-bright);
  }
}
@media only screen and (min-width: 1600px) {
  .btn-hover-accent-mobile i,
  .btn-hover-accent-mobile span {
    text-shadow:
      0 0 var(--t-bright),
      0 6rem var(--t-bright);
  }
  .no-touch .btn-hover-accent-mobile:hover i,
  .no-touch .btn-hover-accent-mobile:hover span {
    text-shadow:
      0 -6rem var(--t-bright),
      0 0 var(--t-bright);
  }
}

.btn-accent-mobile {
  background: var(--accent);
  background: -moz-linear-gradient(
    315deg,
    var(--accent) 0%,
    var(--secondary) 100%
  );
  background: linear-gradient(135deg, var(--accent) 0%, var(--secondary) 100%);
  color: var(--t-opp-bright);
}
@media only screen and (min-width: 992px) {
  .btn-accent-mobile {
    background: var(--base);
    border: 1px solid var(--stroke-controls);
    color: var(--t-bright);
  }
}

.btn-hover-outline::before {
  background-color: transparent;
  border: 1px solid var(--stroke-controls);
}
.btn-hover-outline i,
.btn-hover-outline span {
  text-shadow:
    0 0 var(--t-bright),
    0 5rem var(--t-bright);
}
@media only screen and (min-width: 1200px) {
  .no-touch .btn-hover-outline:hover i,
  .no-touch .btn-hover-outline:hover span {
    text-shadow:
      0 -5rem var(--t-bright),
      0 0 var(--t-bright);
  }
}
@media only screen and (min-width: 1600px) {
  .btn-hover-outline i,
  .btn-hover-outline span {
    text-shadow:
      0 0 var(--t-bright),
      0 6rem var(--t-bright);
  }
  .no-touch .btn-hover-outline:hover i,
  .no-touch .btn-hover-outline:hover span {
    text-shadow:
      0 -6rem var(--t-bright),
      0 0 var(--t-bright);
  }
}

.btn-outline {
  background-color: transparent;
  border: 1px solid var(--stroke-controls);
  color: var(--t-bright);
}

.btn-hover-outline-mobile::before {
  background-color: transparent;
  border: 1px solid var(--stroke-controls);
}
.btn-hover-outline-mobile i,
.btn-hover-outline-mobile span {
  color: var(--t-bright);
}
@media only screen and (min-width: 992px) {
  .btn-hover-outline-mobile::before {
    background-color: transparent;
    border: none;
  }
  .btn-hover-outline-mobile i,
  .btn-hover-outline-mobile span {
    color: var(--t-disabled);
  }
}
@media only screen and (min-width: 1200px) {
  .btn-hover-outline-mobile i,
  .btn-hover-outline-mobile span {
    color: rgba(0, 0, 0, 0);
    text-shadow:
      0 0 var(--t-disabled),
      0 5rem var(--t-disabled);
  }
  .no-touch .btn-hover-outline-mobile:hover i,
  .no-touch .btn-hover-outline-mobile:hover span {
    text-shadow:
      0 -5rem var(--t-bright),
      0 0 var(--t-bright);
  }
}
@media only screen and (min-width: 1600px) {
  .btn-hover-outline-mobile i,
  .btn-hover-outline-mobile span {
    text-shadow:
      0 0 var(--t-disabled),
      0 6rem var(--t-disabled);
  }
  .no-touch .btn-hover-outline-mobile:hover i,
  .no-touch .btn-hover-outline-mobile:hover span {
    text-shadow:
      0 -6rem var(--t-bright),
      0 0 var(--t-bright);
  }
}

.btn-outline-mobile {
  background-color: transparent;
  border: 1px solid var(--stroke-controls);
  color: var(--t-bright);
}
@media only screen and (min-width: 992px) {
  .btn-outline-mobile {
    background-color: transparent;
    border: none;
    color: var(--t-disabled);
  }
}

.btn-hover-transparent::before {
  background-color: transparent;
}
.btn-hover-transparent i,
.btn-hover-transparent span {
  text-shadow:
    0 0 var(--t-disabled),
    0 5rem var(--t-disabled);
}
@media only screen and (min-width: 1200px) {
  .no-touch .btn-hover-transparent:hover i,
  .no-touch .btn-hover-transparent:hover span {
    text-shadow:
      0 -5rem var(--t-disabled),
      0 0 var(--t-disabled);
  }
}
@media only screen and (min-width: 1600px) {
  .btn-hover-transparent i,
  .btn-hover-transparent span {
    text-shadow:
      0 0 var(--t-disabled),
      0 6rem var(--t-disabled);
  }
  .no-touch .btn-hover-transparent:hover i,
  .no-touch .btn-hover-transparent:hover span {
    text-shadow:
      0 -6rem var(--t-bright),
      0 0 var(--t-bright);
  }
}

.btn-transparent {
  background-color: transparent;
  color: var(--t-bright);
}

.btn-line {
  -webkit-box-pack: start;
  -moz-box-pack: start;
  -ms-flex-pack: start;
  justify-content: start;
  font: normal 700 1.6rem/1 var(--_font-default);
}
.btn-line i,
.btn-line span {
  position: relative;
}
.btn-line i {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1.8rem;
  margin-left: 0.6rem;
  overflow: hidden;
}
@media only screen and (min-width: 1600px) {
  .btn-line {
    font-size: 2rem;
  }
  .btn-line i {
    font-size: 2.2rem;
  }
}

.btn-square {
  width: 5rem;
  height: 5rem;
  -moz-border-radius: var(--_radius-m);
  border-radius: var(--_radius-m);
}
.btn-square i {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1.8rem;
  overflow: hidden;
}
@media only screen and (min-width: 1600px) {
  .btn-square {
    width: 6rem;
    height: 6rem;
  }
  .btn-square i {
    font-size: 2.2rem;
  }
}

.btn-square-s i {
  font-size: 1.4rem;
}
/* ... */

